Archive2/c6/43db52430a0f99/output
main.cpp:5:18: error: expected a type
    using bind = std::bind<R...>;
                 ^
main.cpp:5:21: error: expected ';' after alias declaration
    using bind = std::bind<R...>;
                    ^
                    ;
2 errors generated.
