Archive2/c6/43db52430a0f99/main.cpp
#include <functional>

namespace my_space {
    template<typename... R> 
    using bind = std::bind<R...>;
}

int main() {}